atualizações versões do spring boot e cloud, adequações nos poms