@@ -30,9 +30,7 @@
 
 		<!-- back-end properties -->
 		<activation-api.version>1.2.0</activation-api.version>
-		<dockerfile-spotify.version>1.4.13</dockerfile-spotify.version>
 		<jaxb-api.version>2.3.1</jaxb-api.version>
-		<jaxb-impl.version>2.3.2</jaxb-impl.version>
 		<jaxb-runtime.version>2.3.2</jaxb-runtime.version>
 		<reflections.version>0.9.12</reflections.version>
 		<!-- back-end properties -->
@@ -51,6 +49,42 @@
 		<webjars-autocomplete.version>1.4.10</webjars-autocomplete.version>
 		<webjars-icheck.version>1.0.2</webjars-icheck.version>
 		<!-- front-end properties -->
+		
+		<!-- maven properties -->
+		<compiler-args.properties>--enable-preview</compiler-args.properties>
+		<jar-index.properties>true</jar-index.properties>
+		<!-- maven properties -->
+		
+		<!-- docker properties -->
+		<dockerfile-spotify.version>1.4.13</dockerfile-spotify.version>
+		<docker-repository.properties>isacalmeida</docker-repository.properties>
+		<docker-info.properties>true</docker-info.properties>
+		<!-- docker properties -->
+		
+		<!-- graal properties -->
+		<graal-nativeimage.version>20.0.0</graal-nativeimage.version>
+		<graal-buildargs.properties>
+			--verbose
+			--no-server
+			--no-fallback 
+			-Dspring.graal.verbose=true
+			--allow-incomplete-classpath
+			-H:+ReportExceptionStackTraces 
+			-Dspring.graal.remove-unused-autoconfig=true 
+		</graal-buildargs.properties>
+		<!-- graal properties -->
+		
+		<!-- main classes properties -->
+		<acesso-service.main-class>br.edu.unoesc.acessoservice.application.boot.AcessoServiceApplication</acesso-service.main-class>
+		<admin-server.main-class>br.edu.unoesc.adminserver.application.boot.AdminServerApplication</admin-server.main-class>
+		<auth-server.main-class>br.edu.unoesc.authserver.application.boot.AuthServerApplication</auth-server.main-class>
+		<config-server.main-class>br.edu.unoesc.configserver.application.boot.ConfigServerApplication</config-server.main-class>
+		<eureka-server.main-class>br.edu.unoesc.eurekaserver.application.boot.EurekaServerApplication</eureka-server.main-class>
+		<hystrix-server.main-class>br.edu.unoesc.hystrixserver.application.boot.HystrixServerApplication</hystrix-server.main-class>
+		<pessoa-service.main-class>br.edu.unoesc.pessoaservice.application.boot.PessoaServiceApplication</pessoa-service.main-class>
+		<zipkin-server.main-class>br.edu.unoesc.zipkinserver.application.boot.ZipkinServerApplication</zipkin-server.main-class>
+		<zuul-server.main-class>br.edu.unoesc.zuulserver.application.boot.ZuulServerApplication</zuul-server.main-class>
+		<!-- main classes properties -->
 	</properties>
 
 	<dependencyManagement>
@@ -115,43 +149,6 @@
 				<version>${zuul-server.version}</version>
 				<type>pom</type>
 			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-parent</artifactId>
-				<version>${spring-boot.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
-					<version>${spring-boot.version}</version>
-					<configuration>
-						<excludeDevtools>true</excludeDevtools>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-
-	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-		</repository>
-	</repositories>
 </project>
